Restored clear button behavior when nothing to clear.

--- a/source/public/styles/main.css
+++ b/source/public/styles/main.css
@@ -345,14 +345,13 @@ button#sort-by-date.inactive .toolbar-button-text, button#show-important.inactiv
 
 
 
-
-
-
-
-
-
-
 .date-input {
     font-family: inherit; /* Inherit from :root */
     font-size: var(--base-font-size);
+}
+
+button.inactive {
+    color: grey;
+    cursor: not-allowed;
+    pointer-events: none;
 }
