--- a/source/public/styles/main.css
+++ b/source/public/styles/main.css
@@ -4,34 +4,22 @@
     --background-color-bubble: rgb(255, 255, 255);
     --important-color: rgb(255, 184, 110);
     --selection-color: rgb(0, 122, 255);
-    --selection-color-group-red: rgb(255, 229, 235);
-    --selection-color-group-blue: rgb(229, 248, 255);
-    --selection-color-group-green: rgb(244, 255, 224);
-    --selection-color-group-yellow: rgb(255, 251, 224);
+    --inactive-label-color: rgb(142, 142, 147);
     --text-color: rgb(0, 0, 0);
-    /*--text-color: rgb(67, 67, 67);*/
-    --inactive-label-color: grey;
+
     --base-font-size: 13px;
     --main-font-weight: normal;
     --border-radius: 28px;
-    --z-index-base: 1;
-    --z-index-toolbar: 100;
-    --z-index-menu: 1000;
-    --z-index-sheet: 2000;
-    --z-index-alert: 3000;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
         --background-color: rgb(28, 28, 28);
         --background-color-bubble: rgb(48, 48, 48);
-        --important-color: rgb(201, 52, 0);
-        --selection-color-group-red: rgb(255, 204, 219);
-        --selection-color-group-blue: rgb(206, 245, 255);
-        --selection-color-group-green: rgb(238, 255, 192);
-        --selection-color-group-yellow: rgb(255, 251, 185);
+        --important-color: rgb(255, 159, 10);
+        --selection-color: rgb(10, 132, 255);
+        --inactive-label-color: rgb(152, 152, 157);
         --text-color: rgb(255, 255, 255);
-        --inactive-label-color: grey;
     }
 
     .date-input {
