Cleaned up code comments.

--- a/source/public/styles/main.css
+++ b/source/public/styles/main.css
@@ -23,7 +23,7 @@
     }
 
     .date-input {
-        color: var(--text-color); /* Set text color to white */
+        color: var(--text-color);
     }
 
     .date-input::-webkit-calendar-picker-indicator {
