--- a/source/public/styles/main.css
+++ b/source/public/styles/main.css
@@ -6,9 +6,10 @@
     --selection-color: rgb(0, 122, 255);
     --inactive-label-color: rgb(142, 142, 147);
     --text-color: rgb(0, 0, 0);
-
     --base-font-size: 13px;
     --main-font-weight: normal;
+    --contentarea-dynamic: 94vw;
+    --contentarea-max: 1200px;
     --border-radius: 28px;
 }
 
@@ -33,8 +34,8 @@ html {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 94vw;
-    max-width: 1200px;
+    width: var(--contentarea-dynamic);
+    max-width: var(--contentarea-max);
     margin: 16px 16px;
 }
 
@@ -49,9 +50,9 @@ html {
     flex-wrap: wrap;
     align-content: flex-start;
     height: 80vh;
-    width: 96vw;
-    max-width: 1200px;
-    overflow: auto;
+    width: var(--contentarea-dynamic);
+    max-width: var(--contentarea-max);
+    /*overflow: auto;*/
 }
 
 .flex-container-elements {
