--- a/source/public/styles/main.css
+++ b/source/public/styles/main.css
@@ -22,6 +22,7 @@
         --inactive-label-color: rgb(152, 152, 157);
         --text-color: rgb(255, 255, 255);
     }
+}
 
 body,
 html {
@@ -57,22 +58,22 @@ html {
 
 .flex-container-elements {
     display: flex;
-    justify-content: flex-start;
+    /*justify-content: flex-start;*/
     flex-wrap: wrap;
-    overflow: auto;
+    /*overflow: auto;*/
     border-radius: var(--border-radius);
 }
 
 .toolbar {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    overflow: hidden;
-    width: 100%;
+    /*align-items: flex-start;*/
+    /*overflow: hidden;*/
+    /*width: 100%;*/ /*KEEP THIS*/ /*KEEP THIS*/ /*KEEP THIS*/
     margin: 8px 8px 24px 8px;
-    padding: 16px 22px;
+    padding: 16px 40px;
+    /*background-color: var(--background-color-bubble);*/ /*KEEP THIS*/ /*KEEP THIS*/ /*KEEP THIS*/
     border-radius: var(--border-radius);
-    background-color: var(--background-color-bubble);
 }
 
 .list-group {
