Fixes header not being inline with checkbox.

--- a/source/public/styles/main.css
+++ b/source/public/styles/main.css
@@ -134,6 +134,8 @@ html {
 
 .list-group-header input[type="checkbox"] {
     margin-right: 10px;
+    position: relative;
+    bottom: 0.16em;
 }
 
 
