Restored scrolling / overflow of list-group container.

--- a/source/public/styles/main.css
+++ b/source/public/styles/main.css
@@ -76,6 +76,7 @@ html {
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
+    overflow: auto;
     height: 80vh;
     width: var(--contentarea-dynamic);
     max-width: var(--contentarea-max);
